fix overflow bug

--- a/briss-v1/assets/briss-customer-navigation.css
+++ b/briss-v1/assets/briss-customer-navigation.css
@@ -1,6 +1,7 @@
 .customer-navigation {
   background-color: var(--primary-color-white-500);
   border-bottom: var(--border-red-5px);
+  width: 100%;
 }
 
 .customer-navigation > ul {
