--- a/briss-v1/assets/briss-product-featured.css
+++ b/briss-v1/assets/briss-product-featured.css
@@ -1,4 +1,6 @@
 .featured__container {
+  width: 100%;
+  overflow: hidden;
   display: flex;
   justify-content: space-evenly;
   align-items: center;
