--- a/briss-v1/assets/index.css
+++ b/briss-v1/assets/index.css
@@ -11,9 +11,12 @@ body {
 
 .body__grid {
   min-height: 100dvh;
-  display: grid;
+  /* display: grid; */
   grid-template-columns: 100%;
+  grid-template-rows: repeat(max-content);
   max-width: 1200px;
+  /* max-width: 100vw; */
+  /* min-width: 100vw; */
   margin: 0 auto;
   border-left: var(--border-red-5px);
   border-right: var(--border-red-5px);
@@ -27,14 +30,12 @@ body {
 
 .grid__main {
   display: grid;
-  /* align-items: start; */
-  /* grid-template-columns: 15% 85%; */
-  grid-template-rows: max-content;
-  grid-template-areas:
+  grid-template-columns: 100%;
+  /* grid-template-areas:
     'customer-nav'
     'nav'
     'content'
-    'sidebar';
+    'sidebar'; */
   background: repeating-linear-gradient(
     to right,
     var(--primary-color-white-500),
@@ -45,14 +46,14 @@ body {
 }
 
 .grid__customer {
-  grid-area: customer-nav;
+  /* grid-area: customer-nav; */
 }
 
 * {
   /* outline: 2px solid rgb(105, 255, 155); */
 }
 
-.grid__nav {
+/* .grid__nav {
   grid-area: nav;
   height: max-content;
 }
@@ -62,15 +63,15 @@ body {
 .grid__about-page,
 .grid__search {
   grid-area: content;
-}
+} */
 
-.grid__customers {
+/* .grid__customers {
   grid-area: sidebar;
 }
 
 .grid__footer {
   grid-area: footer;
-}
+} */
 
 .dash {
   width: 8rem;
